--- a/RedCinco_v0.04.css
+++ b/RedCinco_v0.04.css
@@ -1393,6 +1393,7 @@ a.link_to_youtube_channel:focus {
       text-align: center;
     width: 312px;
     display: inline-block;
+    color: #ffffff;
     }
     .padding_left_10px {
       color: #ffffff;
