--- a/RedCinco_v0.04.css
+++ b/RedCinco_v0.04.css
@@ -967,7 +967,7 @@ body {
   background-size: cover;
   max-width: 33.33%;
   min-width: 310px;
-  height: 2000px;
+  height: 100%;
   background: !important;
   text-align: center;
 }
@@ -1389,7 +1389,7 @@ a.link_to_youtube_channel:focus {
 }
 .bf_intro_container {
   overflow-y: auto;
-      height: 100vh;
+      height: calc(100% - 44px);
       text-align: center;
       width: 312px;
       display: inline-block;
