--- a/RedCinco_v0.04.css
+++ b/RedCinco_v0.04.css
@@ -967,6 +967,15 @@ body {
   background-size: cover;
   max-width: 33.33%;
   min-width: 310px;
+  height: 2000px;
+  background: !important;
+  text-align: center;
+}
+.wrap_website_jovi > .swiper-container > .swiper-wrapper > .swiper-slide > .bf_intro_container {
+  background-position: center;
+  background-size: cover;
+  max-width: 33.33%;
+  min-width: 310px;
   height: 100%;
   background: !important;
   text-align: center;
@@ -1481,13 +1490,12 @@ a.link_to_youtube_channel:focus {
 .bf_farm_container {
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: 2000px;
   margin: 0 auto;
   left: 0;
   right: 0;
   text-align: center;
-  overflow: auto;
-  padding-bottom: 10000px;
+  overflow: hidden;
 }
 .bf_facebook_container {
   position: absolute;
